testdata/baselines/reference/submodule/compiler/jsdocRestParameter_es6.errors.txt
/a.js(1,13): error TS8010: Type annotations can only be used in TypeScript files.


==== /a.js (1 errors) ====
    /** @param {...number} a */
                ~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    function f(...a) {
        a; // number[]
    }
    